--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src = 'js/scripts.js'></script>
-  <link href = "css/styles.css" rel="stylesheet" type = 'text/css'>
+  <script src='js/scripts.js'></script>
+  <link href="css/styles.css" rel="stylesheet" type='text/css'>
   <title>Triangle Tracker</title>
 </head>
+
 <body>
-  
+  <h1>Triangle Tracker</h1>
+  <form id='form'>
+    <label>
+      <input type='number' id="side1">
+    </label>
+    <label>
+      <input type='number' id="side2">
+    </label>
+    <label>
+      <input type='number' id="side3">
+    </label>
+    <button id="button-submit">Track</button>
+  </form>
+
+  <p id="display-triangle"></p>
 </body>
 </html>
